--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="main-header">
       <div class="container">
         <nav class="navigation">
-          <h1 class="main-logo"><a href="#">MoGo</a></h1>
+          <a href="#" class="main-logo">MoGo</a>
           <ul class="nav-list">
             <li class="nav-list__item"><a href="#">about</a></li>
             <li class="nav-list__item"><a href="#">service</a></li>
@@ -149,8 +149,8 @@
         <div class="footer-wrap">
           <p class="footer-name">&copy 2016 MoGo free PSD template by <a href="#" class="footer-link-item">Laaqiq</a></p>
           <form action="#" class="email-form">
-            <input type="email" placeholder="Your email..." />
-            <button class="subscribe-button">subscribe</button>
+            <input type="email" placeholder="Your Email..." />
+            <button type="submit" class="subscribe-button">subscribe</button>
           </form>
         </div>
       </div>
