--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="footer-wrap">
           <p class="footer-name">&copy 2016 MoGo free PSD template by <a href="#" class="footer-link-item">Laaqiq</a></p>
           <form action="#" class="email-form">
-            <input type="email" placeholder="Your Email..." />
+            <input type="email" name="email" placeholder="Your Email..." />
             <button type="submit" class="subscribe-button">subscribe</button>
           </form>
         </div>
